examples/test/testpolicy9586.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9586
  namespace: namespace491
spec:
  podSelector:
    matchLabels:
      key25: value32
      key1: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value41
          key1: value48
          key47: value38
      podSelector:
        matchLabels:
          key11: value9
